adding endpoints & actions
