# schemas/openapi/api.yaml
@@ -7,6 +7,26 @@ servers:
   - url: 'http://localhost:8090'
 paths:
   /todos:
+    get:
+      summary: search todos
+      operationId: retrieveTodos
+      parameters:
+        - in: query
+          name: filter
+          schema:
+            type: string
+          required: false
+
+
+      responses:
+        200:
+          description: Successful Query
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/QueryPage'
+
+
     post:
       summary: Create a todo
       operationId: createTodo
@@ -27,20 +47,26 @@ paths:
           content:
             application/json:
               schema:
-                title: TodoResource
-                type: object
-                properties:
-                  creator:
-                    type: string
-                    format: uri
-                  details:
-                    type: string
-                    description: Textual description of the todo item. unique for incomplete todo
-                  id:
-                    type: string
-                  completed:
-                    type: boolean
+                $ref: '#/components/schemas/TodoResource'
 
+  /todos/{todoId}:
+    get:
+      operationId: retrieveTodo
+      summary: retrieve a todo by it's id
+      parameters:
+        - in: path
+          name: todoId
+          schema:
+            type: string
+          required: true
+
+      responses:
+        200:
+          description: Successful request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TodoResource'
 
 
   /todos/{todoId}/complete:
@@ -51,7 +77,7 @@ paths:
         - in: path
           name: todoId
           schema:
-              type: string
+            type: string
           required: true
 
       responses:
@@ -60,18 +86,30 @@ paths:
           content:
             application/json:
               schema:
-                title: TodoResource
-                type: object
-                properties:
-                  creator:
-                    type: string
-                    format: uri
-                  details:
-                    type: string
-                    description: Textual description of the todo item. unique for incomplete todo
-                  id:
-                    type: string
-                  completed:
-                    type: boolean
+                $ref: '#/components/schemas/TodoResource'
 
+
+components:
+  schemas:
+    QueryPage:
+      type: object
+      properties:
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/TodoResource'
+
+    TodoResource:
+      type: object
+      properties:
+        creator:
+          type: string
+          format: uri
+        details:
+          type: string
+          description: Textual description of the todo item. unique for incomplete todo
+        id:
+          type: string
+        completed:
+          type: boolean
 
